2006-01-05  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/GNUmakefile: Modified to build PreferencesKit as a framework (was
    a library) in order to allow resource files like PrebuiltTableView.gorm
    to be easily deployed. Removed superfluous license notice too.
    * Source/GNUmakefile.postamble: 
    * GNUmakefile:
    Removed superfluous license notice.

2006-01-04  Yen-Ju Chen <yjchenx At__ gmail>

   * Source/PKMatrixViewPresentation.m:
   * Source/PKMatrixView.h:
   * Source/PKMatrixView.m:
   * Headers/PKMatrixViewPresentation.h:
   New matrix-style presentation.

2006-01-03  Yen-Ju Chen <yjchenx At__ gmail>

   * Source/PKPreferencesController:
   Remove declaration on mac in order to build successfully.

2005-12-26  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/UKPluginsRegistry.m: Added 'APPLICATION_SUPPORT' macro
    wrapped in a conditional directive to take in account folder name variations
    between GNUstep and Cocoa (bug reported by Rob Burns) 

2005-12-20  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/PKPreferencesController.m (-preferencesView): Really fixed
    this time, in our last commit the conditional directive wrongly
    referenced 'GNUstep' and not 'GNUSTEP' (-contentViewWithoutToolbar was
    thus not called).

2005-11-28  Quentin Mathe <qmathe@club-internet.fr>
   
    * Source/PKPreferencesController.m (-preferencesView): Fixed to return the
    right view when 'preferencesView' outlet is nil (was returning nil).
    
2005-11-22  Quentin Mathe <qmathe@club-internet.fr>
    
    PreferencesKit compilation restored on GNUstep (breaks Cocoa compilation).
    * Source/GNUmakefile: Included CocoaCompatibility files to fix compilation
    on GNUstep.
    * Headers/CocoaCompatibility.h:
    * Source/CocoaCompatibility.m:
    Updated to be usable on GNUstep side.
    * Source/PKTableViewPreferencesController.h:
    (-resizePreferencesViewForView:): Minor fix in order it works on GNUstep.