@@ -1,3 +1,9 @@
+2006-01-06  Quentin Mathe <qmathe@club-internet.fr>
+    
+    * Source/PKTableViewPreferencesController.m (-loadUI): Added checks
+    to test whether prebuiltTableView nib is correctly loaded, exceptions are
+    now thrown otherwise.
+
 2006-01-05  Quentin Mathe <qmathe@club-internet.fr>
     
     * Source/GNUmakefile: Modified to build PreferencesKit as a framework (was
